# schemaforge-ai

./: .env.example  .gitignore  Dockerfile  README.md  README_zh.md  docker-compose.yml  pyproject.toml  start.sh
.github/workflows/: docker-build.yml
app/: main.py
app/api/: __init__.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: __init__.py  model_generation.py  structure.py
app/core/: __init__.py  auth.py  config.py  logging.py
app/schemas/: __init__.py  structure.py
app/services/: __init__.py  model_generation_service.py  structure_service.py
docs/: configuration.md  configuration_zh.md
examples/: README.md  README_zh.md  model_generation_example.py  predefined_models.py  schemaforge_sdk.py  schemaforge_sdk_zh.py  sdk_README.md  sdk_README_zh.md
